# mlflow-sweeper

./: .gitignore  README.md  pyproject.toml  requirements.txt  sweep.py
.github/workflows/: tests.yml
docs/: plots.md
src/mlflow_sweeper/: __init__.py  __main__.py  config.py  locking.py  optimize.py  plots.py  process_executor.py  results.py  runner.py  study.py  sweep.py
src/mlflow_sweeper/samplers/: README.md  grid.py  random.py  sensitivity.py
tests/: __init__.py  conftest.py  helpers.py  test_config_validation.py  test_grid_sampler.py  test_locking.py  test_plots.py  test_programmatic.py  test_random_sampler.py  test_sensitivity_sampler.py  test_sweeps.py  test_update_params.py
tests/assets/: create_child_run.py  example_config.yaml  log_metric.py  maybe_fail.py  print_sweep_vars.py  programmatic_funcs.py
