[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-sweeper"
version = "0.1.0"
description = "Run parameter sweeps by executing a command and logging trials to MLflow (coordinated via Optuna)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mlflow-sweeper contributors" }]
dependencies = [
  "filelock",
  "mlflow",
  "numpy",
  "omegaconf",
  "optuna",
]

[project.scripts]
mlflow-sweep = "mlflow_sweeper.sweep:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

